Fix background dissappearing on mobile devices

--- a/style.css
+++ b/style.css
@@ -359,7 +359,7 @@ display: none;
     background: url('img/background-mb.png');
     background-position: 50% 50%;
     background-size: 100% 100%;
-    background-attachment: fixed;
+    background-attachment: initial;
   }
 
   .main-content {
